--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <version>2.21.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
