--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,11 @@
             <version>42.6.0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.jdbi</groupId>
+            <artifactId>jdbi3-core</artifactId>
+            <version>3.42.0</version>
+        </dependency>
     </dependencies>
 
     <build>
